Modernization: Replacing Paths.get with Path.of